# stock_trading_platform

./: .gitignore  README.md  claude.md  main.py  plan.md  pyproject.toml  week1_execution.md  week1_summary.md  week2_execution.md  week2_summary.md  week3_execution.md  week3_summary.md  week4_correction.md  week4_execution.md  week4_summary.md
benchmarks/: README.md  throughput.py
data/: snapshot.json
examples/: basic_usage.py
trading/: __init__.py  logging_config.py
trading/api/: broadcaster.py  consumer.py  dependencies.py  health.py  routes.py  schemas.py  websocket.py
trading/engine/: __init__.py  matcher.py  order_book.py  order_book_manager.py
trading/events/: __init__.py  models.py
trading/metrics/: collector.py
trading/persistence/: event_log.py  snapshot.py
trading/risk/: checker.py
trading/tests/: __init__.py  conftest.py  test_api.py  test_edge_cases.py  test_failure_injection.py  test_health.py  test_idempotency.py  test_idempotency_persistence.py  test_integration.py  test_metrics.py  test_models.py  test_order_book.py  test_order_book_manager.py  test_persistence.py  test_properties.py  test_recovery.py  test_registry_eviction.py  test_risk.py  test_websocket.py
