[project]
name = "stock-trading-platform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.131.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "black>=26.1.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.8.2",
    "hypothesis>=6.151.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
